Better color integration for the urlbar and the findbar

BUG:256535